# P2_GetYourPaletteHere

./: CMakeLists.txt  README.md  ReadMe.txt  imgui.ini  main.cpp
include/imgui/: imgui.cpp  imgui.h
src/: Color.cpp  Color.h  MedianCut.cpp  MedianCut.h  main.cpp
